--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -1,33 +1,38 @@
-<h1>Listing receipts</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <div id="page-wrap">
+        <h1>Listing receipts</h1>
+        <table class="receipts-table">
+          <thead>
+          <tr>
+            <th>Total spent</th>
+            <th>Picture of receipt</th>
+            <th>Brother who submitted</th>
+            <th>Seen receipt</th>
+            <th></th>
+            <th></th>
+          </tr>
+          </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Total spent</th>
-      <th>Picture of receipt</th>
-      <th>Brother who sumbitted</th>
-      <th>Seen receipt</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+          <tbody>
+          <% @receipts.each do |receipt| %>
+              <tr>
+                <td><%= receipt.total_spent ? receipt.total_spent : 'N/A' %></td>
+                <td><%= receipt.picture_of_receipt ? receipt.picture_of_receipt : 'N/A' %></td>
+                <td><%= receipt.brother_who_submitted ? receipt.brother_who_submitted : 'N/A' %></td>
+                <td><%= receipt.seen_receipt ? receipt.seen_receipt : 'N/A' %></td>
+                <td><%= link_to 'Show', receipt %></td>
+                <td><%= link_to 'Edit', edit_receipt_path(receipt) %></td>
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
 
-  <tbody>
-    <% @receipts.each do |receipt| %>
-      <tr>
-        <td><%= receipt.total_spent %></td>
-        <td><%= receipt.picture_of_receipt %></td>
-        <td><%= receipt.brother_who_submitted %></td>
-        <td><%= receipt.seen_receipt %></td>
-        <td><%= link_to 'Show', receipt %></td>
-        <td><%= link_to 'Edit', edit_receipt_path(receipt) %></td>
-        <td><%= link_to 'Destroy', receipt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <br>
 
-<br>
-
-<%= link_to 'New Receipt', new_receipt_path %>
+        <%= link_to 'New Receipt', new_receipt_path %>
+      </div>
+    </div>
+  </div>
+</div>
