--- a/app/views/receipts/new.html.erb
+++ b/app/views/receipts/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New receipt</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', receipts_path %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2 top-card-padding">
+    <div class="card">
+      <h1>New receipt</h1>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
