--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -765,23 +765,23 @@ body {
   padding:0;
   height:100%;
 }
-#container {
+#wrapper {
   min-height:100%;
   position:relative;
 }
 #header {
-  padding:10px;
-  padding-bottom: 9rem;
+  padding: 7rem;
 }
-#body {
-  padding:10px;
-  padding-bottom:60px;   /* Height of the footer */
+#content {
+  padding-bottom:100px; /* Height of the footer element */
 }
 #footer {
+  background:#ffab62;
+  width:100%;
+  height:100px;
   position:absolute;
   bottom:0;
-  width:100%;
-  height:60px;   /* Height of the footer */
+  left:0;
 }
 //Helps with internet exploer 5/6
 #container {
