fix for contact page issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -770,10 +770,11 @@ body {
   position:relative;
 }
 #header {
-  padding: 7rem;
+  padding: 5rem;
 }
 #content {
-  padding-bottom:100px; /* Height of the footer element */
+  padding-bottom: 13rem; /* Height of the footer element */
+
 }
 #footer {
   background:#ffab62;
