--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <h1 align="center">All of our blog posts (Newest at the top)</h1>
   <h3 align="center"><%= link_to 'Create a New Post', new_post_path, "data-no-turbolink" => true  %></h3>
   <h5 align="center">Top card being selected allows you to change which card shows up on the home screen separated from all of the other cards </h5>
-  <table>
+  <table class="posts-table">
     <thead>
     <tr>
       <th>Title</th>
