--- a/app/views/users/edit_all.html.erb
+++ b/app/views/users/edit_all.html.erb
@@ -2,7 +2,7 @@
 <br><br>
 <div class="posts_checkboxes">
 <%= form_for :user, :url => update_all_path, :html => { :method => :put } do %>
-    <table>
+    <table class="user-all-edit-table">
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
