fixed footer and body issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -772,7 +772,7 @@ and (max-device-width : 480px) {
   body {
     padding: 0;
     margin: 0;
-    width: 320px; }
+  }
 }
 
 /* iPads (portrait and landscape) ----------- */
