--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,10 +43,11 @@
           <% elsif  current_user.role == "president" %>
             <li><%= link_to "Posts", posts_path, class: "nav-item" %></li>
             <li><%= link_to "News-Letters", new_alumni_news_letter_path %></li>
-          <% else %>
+          <% end %>
+          <% if current_user.confirmed_brother %>
             <li><%= link_to "News-Letters", alumni_news_letters_path %></li>
           <% end %>
-          <li><%=  link_to "Account", current_user  %></li>
+          <li><%= link_to "Account", current_user  %></li>
         <% end %>
         <% if user_signed_in?%>
           <li><%= link_to "Sign-out", destroy_user_session_path, :method => :delete, class: "nav-item" %></li>
