--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -20,7 +20,7 @@
               <tr>
                 <td><%= receipt.total_spent ? receipt.total_spent : 'N/A' %></td>
                 <td><%= receipt.picture_of_receipt ? receipt.picture_of_receipt : 'N/A' %></td>
-                <td><%= receipt.brother_who_submitted ? receipt.brother_who_submitted : 'N/A' %></td>
+                <td><%= receipt.usersdfsdf ? receipt.brother_who_submitted : 'N/A' %></td>
                 <td><%= receipt.seen_receipt ? receipt.seen_receipt : 'N/A' %></td>
                 <td><%= link_to 'Show', receipt %></td>
                 <td><%= link_to 'Edit', edit_receipt_path(receipt) %></td>
