updated some views and reciepts

--- a/app/views/receipts/_form.html.erb
+++ b/app/views/receipts/_form.html.erb
@@ -20,8 +20,8 @@
       <%= f.file_field :picture_of_receipt ,placeholder: 'Image File' %>
       <%= f.text_field :remote_picture_of_receipt_url, placeholder: 'Or input url of photo' %>
     </div>
-    <% if current_user.role == '' %>
-    <div class="field">
+    <% if current_user.role == ('admin') %>
+    <div class="field posts_checkboxes">
       <%= f.label :seen_receipt %><br>
       <%= f.check_box :seen_receipt %>
     </div>
