--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,22 +1,14 @@
+
 <%= form_for(@user, url: users_admin_index_path(@user) ) do |f| %>
-    <div class="field">
-      <%= f.label :first_name %><br>
-      <%= f.text_field :first_name %>
+    <div class="registration_space">
+      <%= f.text_field :first_name, autofocus: true, :placeholder => "First Name", :class => "col-md-3" %>
+      <%= f.text_field :last_name,:placeholder => "Last Name",:class => "col-md-3" %>
     </div>
     <div class="field">
-      <%= f.label :last_name %><br>
-      <%= f.text_field :last_name %>
-    </div>
-    <div class="field">
-      <%= f.label :email %><br>
-      <%= f.text_field :email %>
-    </div>
-    <div class="field">
-      <%= f.label :phone_number %><br>
-      <%= f.text_field :phone_number %>
+      <%= f.email_field :email, :placeholder => "Email", :class => "col-md-3" %>
+      <%= f.text_field :phone_number, :placeholder => "Phone Number", :class => "col-md-3" %>
     </div>
     <div class="actions">
       <%= f.submit %>
     </div>
 <% end %>
-
