--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2 top-card-padding">
-    <div class="card">
+    <div class="card_registration">
       <h1>New User</h1>
       <%= render 'form' %>
     </div>
