--- a/app/views/text_messages/new.html.erb
+++ b/app/views/text_messages/new.html.erb
@@ -2,7 +2,9 @@
   <div class="col-md-6 col-md-offset-3 top-card-padding">
     <div class="card_registration">
       <h1>New Text Message</h1>
-
+      <h4>To use someone's first name in text messages just type: first_name</h4>
+      <h4>To create a line break just type: line_break</h4>
+      <h4>To send group text message don't enter a Phone Number</h4>
       <%= render 'form' %>
 
       <%= link_to 'Back', text_messages_path %>
