basic switch between multiple points of contact on texts

--- a/app/views/text_messages/new.html.erb
+++ b/app/views/text_messages/new.html.erb
@@ -5,6 +5,8 @@
       <h4>To use someone's first name in text messages just type: first_name</h4>
       <h4>To create a line break just type: line_break</h4>
       <h4>To send group text message don't enter a Phone Number</h4>
+      <h4>To send multiple contacts type start_contacts enter in all of your contacts sepereated by a comma and at the end put end_contacts</h4>
+      <h5>Example is hi start_contacts Paul Darragh (508) 888 - 5643, Bob Smith (508) 333 -4554 end_contacts</h5>
       <%= render 'form' %>
 
       <%= link_to 'Back', text_messages_path %>
