valentines day update

--- a/app/views/valentines_day_delieveries/_form.html.erb
+++ b/app/views/valentines_day_delieveries/_form.html.erb
@@ -17,14 +17,14 @@
           <div align="center">
             <h3>Pick your flowers</h3>
             <%= f.number_field :red_flower_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_red_flowers} Red Flowers Left" %>
-            <%= f.number_field :white_flower_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_white_flowers} White Flowers Left" %>
+           <!--<%= f.number_field :white_flower_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_white_flowers} White Flowers Left" %>-->
             <%= f.number_field :pink_flower_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_pink_flowers} Pink Flowers Left" %>
           </div>
           <div style="clear: both"></div>
           <div align="center">
             <h3>Pick your stuffed animial</h3>
-            <%= f.number_field :large_stuffed_animial_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_large_stuffed_animials} Large Stuffed Animals" %>
-            <%= f.number_field :medium_stuffed_animial_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_medium_stuffed_animials} Medium Stuffed Animals" %>
+            <!--<%= f.number_field :large_stuffed_animial_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_large_stuffed_animials} Large Stuffed Animals" %>-->
+            <!--<%= f.number_field :medium_stuffed_animial_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_medium_stuffed_animials} Medium Stuffed Animals" %>-->
             <%= f.number_field :small_animial_quantity,autocomplete: "off", :placeholder => "#{@valentines_day_inventory.total_small_stuffed_animials} Small Stuffed Animals" %>
           </div>
           <div style="clear: both"></div>
