updated valentines day index

--- a/app/views/valentines_day_delieveries/edit.html.erb
+++ b/app/views/valentines_day_delieveries/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing valentines_day_delievery</h1>
+<div align="center">
+  <h1>Edit Valentines Day Order</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @valentines_day_delievery %> |
-<%= link_to 'Back', valentines_day_delieveries_path %>
