--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -763,6 +763,20 @@ only screen and (max-width: 760px),
   .user-all-edit-table td:nth-of-type(3):before { content: "Email"; }
   .user-all-edit-table td:nth-of-type(4):before { content: "Role"; }
   .user-all-edit-table td:nth-of-type(5):before { content: "Confirmed Brother"; }
+
+  .valentines-table td:nth-of-type(1):before { content: "Red flowers"; }
+  .valentines-table td:nth-of-type(2):before { content: "Pink flowers"; }
+  .valentines-table td:nth-of-type(3):before { content: "Stuffed animals"; }
+  .valentines-table td:nth-of-type(4):before { content: "Buyer name"; }
+  .valentines-table td:nth-of-type(5):before { content: "Buyer phone number"; }
+  .valentines-table td:nth-of-type(6):before { content: "Receivers name"; }
+  .valentines-table td:nth-of-type(7):before { content: "Receivers phone number"; }
+  .valentines-table td:nth-of-type(8):before { content: "Delivery location"; }
+  .valentines-table td:nth-of-type(9):before { content: "Delivery time"; }
+  .valentines-table td:nth-of-type(10):before { content: "Delivery instructions"; }
+  .valentines-table td:nth-of-type(11):before { content: "Payment Method"; }
+  .valentines-table td:nth-of-type(12):before { content: "Edit Order"; }
+  .valentines-table td:nth-of-type(13):before { content: "Delete Order"; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
