--- a/app/views/valentines_day_delieveries/index.html.erb
+++ b/app/views/valentines_day_delieveries/index.html.erb
@@ -1,57 +1,47 @@
-<h1>Listing valentines_day_delieveries</h1>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2 padding-bot">
+    <div class="card">
+        <h1>Valentines day orders</h1>
+        <table class="valentines-table">
+          <thead>
+          <tr>
+            <th>Red flowers</th>
+            <th>Pink flowers</th>
+            <th>Stuffed animals</th>
+            <th>Buyer name</th>
+            <th>Buyer phone number</th>
+            <th>Receivers name</th>
+            <th>Receivers phone number</th>
+            <th>Delivery location</th>
+            <th>Delivery time</th>
+            <th>Delivery instructions</th>
+            <th>Payment Method</th>
+            <th>Edit Order</th>
+            <th>Delete Order</th>
+          </tr>
+          </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Red flower quantity</th>
-      <th>White flower quantity</th>
-      <th>Pink flower quantity</th>
-      <th>Large stuffed animial quantity</th>
-      <th>Medium stuffed animial quantity</th>
-      <th>Small animial quantity</th>
-      <th>Buyer name</th>
-      <th>Buyer phone number</th>
-      <th>Recievers name</th>
-      <th>Recievers phone number</th>
-      <th>Delivery location</th>
-      <th>Delivery time</th>
-      <th>Delivery instructions</th>
-      <th>Payment</th>
-      <th>Paypal cost</th>
-      <th>Total price</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @valentines_day_delieveries.each do |valentines_day_delievery| %>
-      <tr>
-        <td><%= valentines_day_delievery.red_flower_quantity %></td>
-        <td><%= valentines_day_delievery.white_flower_quantity %></td>
-        <td><%= valentines_day_delievery.pink_flower_quantity %></td>
-        <td><%= valentines_day_delievery.large_stuffed_animial_quantity %></td>
-        <td><%= valentines_day_delievery.medium_stuffed_animial_quantity %></td>
-        <td><%= valentines_day_delievery.small_animial_quantity %></td>
-        <td><%= valentines_day_delievery.buyer_name %></td>
-        <td><%= valentines_day_delievery.buyer_phone_number %></td>
-        <td><%= valentines_day_delievery.recievers_name %></td>
-        <td><%= valentines_day_delievery.recievers_phone_number %></td>
-        <td><%= valentines_day_delievery.delivery_location %></td>
-        <td><%= valentines_day_delievery.delivery_time %></td>
-        <td><%= valentines_day_delievery.delivery_instructions %></td>
-        <td><%= valentines_day_delievery.payment %></td>
-        <td><%= valentines_day_delievery.paypal_cost %></td>
-        <td><%= valentines_day_delievery.total_price %></td>
-        <td><%= link_to 'Show', valentines_day_delievery %></td>
-        <td><%= link_to 'Edit', edit_valentines_day_delievery_path(valentines_day_delievery) %></td>
-        <td><%= link_to 'Destroy', valentines_day_delievery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Valentines day delievery', new_valentines_day_delievery_path %>
+          <tbody>
+          <% @valentines_day_delieveries.each do |valentines_day_delievery| %>
+              <tr>
+                <td><%= valentines_day_delievery.red_flower_quantity %></td>
+                <td><%= valentines_day_delievery.pink_flower_quantity %></td>
+                <td><%= valentines_day_delievery.small_animial_quantity %></td>
+                <td><%= valentines_day_delievery.buyer_name %></td>
+                <td><%= valentines_day_delievery.buyer_phone_number %></td>
+                <td><%= valentines_day_delievery.recievers_name %></td>
+                <td><%= valentines_day_delievery.recievers_phone_number %></td>
+                <td><%= valentines_day_delievery.delivery_location %></td>
+                <td><%= valentines_day_delievery.delivery_time %></td>
+                <td><%= valentines_day_delievery.delivery_instructions? ? valentines_day_delievery.delivery_instructions : 'None'%></td>
+                <td><%= valentines_day_delievery.payment %></td>
+                <td><%= link_to 'Edit', edit_valentines_day_delievery_path(valentines_day_delievery) %></td>
+                <td><%= link_to 'Destroy', valentines_day_delievery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
+        <br>
+    </div>
+  </div>
+</div>
