changed routing on home page to be able to link to images or galleries

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,6 +20,7 @@
             <li><h2 class="footer_title">Reach Out</h2></li>
             <li><%= link_to "Contact Us", contact_us_path, class: "nav-item"%></li>
             <li><%= link_to "Parents", information_for_parents_path, class: "nav-item"%></li>
+            <li><%= link_to "Galleries", galleries_path, class: "nav-item"%></li>
           </ul>
         </li>
       </ul>
