--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,9 @@
           <h1 class="card_header"><%= @top_card.title %></h1>
           <div class="img_div">
             <%= (link_to (image_tag get_link(@top_card)), get_img_path(@top_card), :class => "post_img") %>
-            <h3 align="center"><%= link_to "Click Here for More #{@top_card.title} Pictures", get_gallery_path(@top_card)  %></h3>
+            <% if get_gallery_path(post) %>
+                <h3 align="center"><%= link_to "Click Here for More #{@top_card.title} Pictures", get_gallery_path(@top_card)  %></h3>
+            <% end %>
           </div>
           <div class="post_text">
             <%= raw @top_card.content %>
@@ -21,7 +23,9 @@
           <h1 class="card_header"><%= post.title %></h1>
           <div class="img_div">
             <%= (link_to (image_tag get_link(post)), get_img_path(post), :class => "post_img") %>
-            <h3 align="center"><%= link_to "Click Here for More #{post.title} Pictures", get_gallery_path(post)  %></h3>
+            <% if get_gallery_path(post) %>
+                <h3 align="center"><%= link_to "Click Here for More #{post.title} Pictures", get_gallery_path(post)  %></h3>
+            <% end %>
           </div>
           <div class="post_text">
             <%= post.content.html_safe %>
